--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 __pycache__
-./data
-./code/data
-./figures
+/data
+/data/*
+/code/icp_warm_up/data/*
+/figures/*
 
-./data/dataRGBD.zip
-./data/dataRGBD/
+# Specifically ignore the dataRGBD subfolder and dataRGBD.zip
+/data/dataRGBD/
+/data/dynamic_occ_map/
+/data/dataRGBD.zip
 
 # mac os
 .DS_Store
